--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-12 14:41+0800\n"
+"POT-Creation-Date: 2023-01-29 16:37+0800\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1184,7 +1184,7 @@ msgstr "Tom"
 msgid "AMS"
 msgstr "AMS"
 
-msgid "NO AMS"
+msgid "AMS not connected"
 msgstr ""
 
 msgid "Cali"
@@ -1566,14 +1566,14 @@ msgstr ""
 msgid "Max volumetric speed"
 msgstr "Max volymetrisk hastighet"
 
-msgid "\\u2103"
+msgid "℃"
 msgstr ""
 
 msgid "Bed temperature"
 msgstr "Byggplattans temperatur"
 
-msgid "mm\\u00B3"
-msgstr ""
+msgid "mm³"
+msgstr "mm³"
 
 msgid "Start calibration"
 msgstr "Starta"
@@ -1582,8 +1582,9 @@ msgid "Next"
 msgstr ""
 
 msgid ""
-"Calibration completed. Please select the factors according to the left "
-"figure and fill them in the input boxes."
+"Calibration completed. Please find the most uniform extrusion line on your "
+"hot bed like the picture below, and fill the value on its left side into the "
+"factor K input box."
 msgstr ""
 
 msgid "Save"
@@ -1591,6 +1592,9 @@ msgstr "Spara"
 
 msgid "Last Step"
 msgstr "Back"
+
+msgid "Example"
+msgstr ""
 
 #, c-format, boost-format
 msgid "Calibrating... %d%%"
@@ -1632,16 +1636,16 @@ msgid "Cabin humidity"
 msgstr ""
 
 msgid ""
-"Green represents that AMS humidity is normal, orange and red represent that "
-"humidity is too high.(Lower the better)"
+"Green means that AMS humidity is normal, orange represent humidity is high, "
+"red represent humidity is too high.(Hygrometer: lower the better.)"
 msgstr ""
 
 msgid "Desiccant status"
 msgstr ""
 
 msgid ""
-"Desiccant status lower than two bars indicates that desiccant can be "
-"inactive. Please change the desiccant.(Higher the better)"
+"A desiccant status lower than two bars indicates that desiccant may be "
+"inactive. Please change the desiccant.(The bars: higher the better.)"
 msgstr ""
 
 msgid ""
@@ -3023,6 +3027,9 @@ msgstr ""
 msgid "Initialize failed (Not accessible in LAN-only mode)!"
 msgstr ""
 
+msgid "Printer is busy downloading, Please wait for the downloading to finish."
+msgstr ""
+
 msgid "Initialize failed (Missing LAN ip of printer)!"
 msgstr ""
 
@@ -3042,6 +3049,9 @@ msgstr ""
 
 msgid "Stopped."
 msgstr "Avbruten."
+
+msgid "LAN Connection Failed (Failed to start liveview)"
+msgstr ""
 
 msgid ""
 "Virtual Camera Tools is required for this task!\n"
@@ -3203,7 +3213,10 @@ msgstr "Stopp"
 msgid "0"
 msgstr ""
 
-msgid "Clean"
+msgid "Layers: N/A"
+msgstr ""
+
+msgid "Clear"
 msgstr ""
 
 msgid "Control"
@@ -3266,6 +3279,14 @@ msgstr "Laddar ner..."
 msgid "Cloud Slicing..."
 msgstr ""
 
+#, c-format, boost-format
+msgid "Layers: %s"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Layers: %d/%d"
+msgstr ""
+
 msgid "Please heat the nozzle to above 170 degree before loading filament."
 msgstr ""
 
@@ -3273,6 +3294,9 @@ msgid "Still unload"
 msgstr ""
 
 msgid "Still load"
+msgstr ""
+
+msgid "AMS settings are not supported for external spool"
 msgstr ""
 
 msgid "Please select an AMS slot before calibration"
@@ -3348,37 +3372,6 @@ msgstr "%s information"
 
 msgid "Skip"
 msgstr "Hoppa över"
-
-msgid "Unable to connect printer"
-msgstr ""
-
-#, c-format, boost-format
-msgid ""
-"Cannot detect the LAN IP address of %s. Are %s and Bambu Studio in the same "
-"LAN?"
-msgstr ""
-
-msgid ""
-"Failed to connect to the printer through LAN. Please enter the correct "
-"printer IP address and access code."
-msgstr ""
-
-msgid "IP"
-msgstr ""
-
-msgid "Access Code"
-msgstr ""
-
-msgid ""
-"Note : The location of IP and access code on the machine is as follows :"
-msgstr ""
-
-msgid ""
-"X1 General Settings - Network Settings in the side bar of X1 main screen"
-msgstr ""
-
-msgid "P1P General Settings - WLAN in the sidebar of the main screen"
-msgstr ""
 
 msgid "3D Mouse disconnected."
 msgstr "3D mus bortkopplad."
@@ -4447,6 +4440,9 @@ msgstr ""
 msgid "Cannot send the print job for empty plate"
 msgstr ""
 
+msgid "This printer does not support printing all plates"
+msgstr ""
+
 msgid "Errors"
 msgstr ""
 
@@ -5053,23 +5049,20 @@ msgstr "Inga uppdateringar tillgängliga."
 msgid "The configuration is up to date."
 msgstr "Konfigurationen är aktuell."
 
-msgid "Flushing volumes for filament change"
-msgstr "Rensnings volym för filament byte"
-
 msgid "Auto-Calc"
 msgstr "Autoberäkna"
 
-msgid "Flushing volume (mm³) for each filament pair."
-msgstr "Rensnings volym (mm³) för varje filament."
+msgid "Flushing volumes for filament change"
+msgstr "Rensnings volym för filament byte"
 
 msgid "Multiplier"
 msgstr ""
 
-msgid "Actual Volume = Flushing Volume * Multiplier"
-msgstr ""
+msgid "Flushing volume (mm³) for each filament pair."
+msgstr "Rensnings volym (mm³) för varje filament."
 
 #, c-format, boost-format
-msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgid "Suggestion: Flushing Volume in range [%d, %d]"
 msgstr ""
 
 #, c-format, boost-format
@@ -5349,6 +5342,30 @@ msgid "New version of Bambu Studio"
 msgstr "Ny version av Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid "LAN Connection Failed (Sending print file)"
+msgstr ""
+
+msgid ""
+"Step 1, please confirm Bambu Studio and your printer are in the same LAN."
+msgstr ""
+
+msgid ""
+"Step 2, if the IP and Access Code below are different from the actual values "
+"on your printer, please correct them."
+msgstr ""
+
+msgid "IP"
+msgstr ""
+
+msgid "Access Code"
+msgstr ""
+
+msgid "Where to find your printer's IP and Access Code?"
+msgstr ""
+
+msgid "Error: IP or Access Code are not correct"
 msgstr ""
 
 msgid "Model:"
@@ -6290,6 +6307,9 @@ msgstr "ifyllnad/inre/yttre"
 msgid "infill/outer/inner"
 msgstr "ifyllnad/yttre/inre"
 
+msgid "inner-outer-inner/infill"
+msgstr ""
+
 msgid "Height to rod"
 msgstr "Höjd till axel"
 
@@ -6401,9 +6421,6 @@ msgstr "mm³/s"
 
 msgid "Minimal purge on wipe tower"
 msgstr "Minimal purge på wipe torn"
-
-msgid "mm³"
-msgstr "mm³"
 
 msgid "Filament load time"
 msgstr "Inmatningstid för filament"
@@ -6966,6 +6983,12 @@ msgstr "Nozzle volym"
 msgid "Volume of nozzle between the cutter and the end of nozzle"
 msgstr "Volymen av nozzlen mellan skäraren och nozzlens ände"
 
+msgid "Start end points"
+msgstr ""
+
+msgid "The start and end points which is from cutter area to garbage can."
+msgstr ""
+
 msgid "Reduce infill retraction"
 msgstr "Minska ifyllnads retraktionen"
 
@@ -7385,8 +7408,8 @@ msgid ""
 "interface is Concentric"
 msgstr ""
 "Linje mönster för support gränssnittsytan .Standardmönstret för olösligt "
-"(material) support gränssnittet är Räta medan standardmönstret för lösligt"
-"(material) stödgränssnittet är koncentriskt"
+"(material) support gränssnittet är Räta medan standardmönstret för "
+"lösligt(material) stödgränssnittet är koncentriskt"
 
 msgid "Base pattern spacing"
 msgstr "Basens mönster mellanrum"
