--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-12 14:41+0800\n"
+"POT-Creation-Date: 2023-01-29 16:37+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1197,7 +1197,7 @@ msgstr "Vacío"
 msgid "AMS"
 msgstr "AMS"
 
-msgid "NO AMS"
+msgid "AMS not connected"
 msgstr ""
 
 msgid "Cali"
@@ -1585,14 +1585,14 @@ msgstr ""
 msgid "Max volumetric speed"
 msgstr "Velocidad volumétrica máxima"
 
-msgid "\\u2103"
+msgid "℃"
 msgstr ""
 
 msgid "Bed temperature"
 msgstr "Temperatura de la base"
 
-msgid "mm\\u00B3"
-msgstr ""
+msgid "mm³"
+msgstr "mm³"
 
 msgid "Start calibration"
 msgstr "Start"
@@ -1601,8 +1601,9 @@ msgid "Next"
 msgstr ""
 
 msgid ""
-"Calibration completed. Please select the factors according to the left "
-"figure and fill them in the input boxes."
+"Calibration completed. Please find the most uniform extrusion line on your "
+"hot bed like the picture below, and fill the value on its left side into the "
+"factor K input box."
 msgstr ""
 
 msgid "Save"
@@ -1610,6 +1611,9 @@ msgstr "Guardar"
 
 msgid "Last Step"
 msgstr "Back"
+
+msgid "Example"
+msgstr ""
 
 #, c-format, boost-format
 msgid "Calibrating... %d%%"
@@ -1651,16 +1655,16 @@ msgid "Cabin humidity"
 msgstr ""
 
 msgid ""
-"Green represents that AMS humidity is normal, orange and red represent that "
-"humidity is too high.(Lower the better)"
+"Green means that AMS humidity is normal, orange represent humidity is high, "
+"red represent humidity is too high.(Hygrometer: lower the better.)"
 msgstr ""
 
 msgid "Desiccant status"
 msgstr ""
 
 msgid ""
-"Desiccant status lower than two bars indicates that desiccant can be "
-"inactive. Please change the desiccant.(Higher the better)"
+"A desiccant status lower than two bars indicates that desiccant may be "
+"inactive. Please change the desiccant.(The bars: higher the better.)"
 msgstr ""
 
 msgid ""
@@ -3057,6 +3061,9 @@ msgstr ""
 msgid "Initialize failed (Not accessible in LAN-only mode)!"
 msgstr ""
 
+msgid "Printer is busy downloading, Please wait for the downloading to finish."
+msgstr ""
+
 msgid "Initialize failed (Missing LAN ip of printer)!"
 msgstr ""
 
@@ -3076,6 +3083,9 @@ msgstr ""
 
 msgid "Stopped."
 msgstr "Detenido."
+
+msgid "LAN Connection Failed (Failed to start liveview)"
+msgstr ""
 
 msgid ""
 "Virtual Camera Tools is required for this task!\n"
@@ -3237,7 +3247,10 @@ msgstr "Detener"
 msgid "0"
 msgstr ""
 
-msgid "Clean"
+msgid "Layers: N/A"
+msgstr ""
+
+msgid "Clear"
 msgstr ""
 
 msgid "Control"
@@ -3300,6 +3313,14 @@ msgstr "Descargando…"
 msgid "Cloud Slicing..."
 msgstr ""
 
+#, c-format, boost-format
+msgid "Layers: %s"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Layers: %d/%d"
+msgstr ""
+
 msgid "Please heat the nozzle to above 170 degree before loading filament."
 msgstr ""
 
@@ -3307,6 +3328,9 @@ msgid "Still unload"
 msgstr ""
 
 msgid "Still load"
+msgstr ""
+
+msgid "AMS settings are not supported for external spool"
 msgstr ""
 
 msgid "Please select an AMS slot before calibration"
@@ -3382,37 +3406,6 @@ msgstr "%s información"
 
 msgid "Skip"
 msgstr "Saltar"
-
-msgid "Unable to connect printer"
-msgstr ""
-
-#, c-format, boost-format
-msgid ""
-"Cannot detect the LAN IP address of %s. Are %s and Bambu Studio in the same "
-"LAN?"
-msgstr ""
-
-msgid ""
-"Failed to connect to the printer through LAN. Please enter the correct "
-"printer IP address and access code."
-msgstr ""
-
-msgid "IP"
-msgstr ""
-
-msgid "Access Code"
-msgstr ""
-
-msgid ""
-"Note : The location of IP and access code on the machine is as follows :"
-msgstr ""
-
-msgid ""
-"X1 General Settings - Network Settings in the side bar of X1 main screen"
-msgstr ""
-
-msgid "P1P General Settings - WLAN in the sidebar of the main screen"
-msgstr ""
 
 msgid "3D Mouse disconnected."
 msgstr "Ratón 3D desconectado."
@@ -4506,6 +4499,9 @@ msgstr ""
 msgid "Cannot send the print job for empty plate"
 msgstr ""
 
+msgid "This printer does not support printing all plates"
+msgstr ""
+
 msgid "Errors"
 msgstr ""
 
@@ -5116,23 +5112,20 @@ msgstr "No hay actualizaciones disponibles."
 msgid "The configuration is up to date."
 msgstr "La configuración está actualizada."
 
-msgid "Flushing volumes for filament change"
-msgstr "Volúmenes de limpieza para el cambio de filamentos"
-
 msgid "Auto-Calc"
 msgstr "Auto-Calc"
 
-msgid "Flushing volume (mm³) for each filament pair."
-msgstr "Volumen de limpieza (mm³) para cada par de filamentos."
+msgid "Flushing volumes for filament change"
+msgstr "Volúmenes de limpieza para el cambio de filamentos"
 
 msgid "Multiplier"
 msgstr ""
 
-msgid "Actual Volume = Flushing Volume * Multiplier"
-msgstr ""
+msgid "Flushing volume (mm³) for each filament pair."
+msgstr "Volumen de limpieza (mm³) para cada par de filamentos."
 
 #, c-format, boost-format
-msgid "Suggestion: Actual Volume in range [%d, %d]"
+msgid "Suggestion: Flushing Volume in range [%d, %d]"
 msgstr ""
 
 #, c-format, boost-format
@@ -5419,6 +5412,30 @@ msgid "New version of Bambu Studio"
 msgstr "Nueva versión de Bambu Studio"
 
 msgid "Don't remind me of this version again"
+msgstr ""
+
+msgid "LAN Connection Failed (Sending print file)"
+msgstr ""
+
+msgid ""
+"Step 1, please confirm Bambu Studio and your printer are in the same LAN."
+msgstr ""
+
+msgid ""
+"Step 2, if the IP and Access Code below are different from the actual values "
+"on your printer, please correct them."
+msgstr ""
+
+msgid "IP"
+msgstr ""
+
+msgid "Access Code"
+msgstr ""
+
+msgid "Where to find your printer's IP and Access Code?"
+msgstr ""
+
+msgid "Error: IP or Access Code are not correct"
 msgstr ""
 
 msgid "Model:"
@@ -6393,6 +6410,9 @@ msgstr "relleno/interior/exterior"
 msgid "infill/outer/inner"
 msgstr "relleno/exterior/interior"
 
+msgid "inner-outer-inner/infill"
+msgstr ""
+
 msgid "Height to rod"
 msgstr "Altura a la barra"
 
@@ -6505,9 +6525,6 @@ msgstr "mm³/s"
 
 msgid "Minimal purge on wipe tower"
 msgstr "Purga mínima en la torre de limpieza"
-
-msgid "mm³"
-msgstr "mm³"
 
 msgid "Filament load time"
 msgstr "Tiempo de carga de filamento"
@@ -7077,6 +7094,12 @@ msgstr "Tamaño de la boquilla"
 
 msgid "Volume of nozzle between the cutter and the end of nozzle"
 msgstr "Espacio de la boquilla entre el cortador y el extremo de la boquilla"
+
+msgid "Start end points"
+msgstr ""
+
+msgid "The start and end points which is from cutter area to garbage can."
+msgstr ""
 
 msgid "Reduce infill retraction"
 msgstr "Reducir la retracción del relleno"
