Fix po and pot file (#258)
* fix typo and tooltip

* merge pot po german

* fix more

* merge with bambu master pot

* fix po to Softfever

* fix

* build new Softfever pot mege with xx.po

* enable hints in german again

--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -125,4 +125,4 @@ src/libslic3r/PrintObject.cpp
 src/libslic3r/PrintObjectSlice.cpp
 src/libslic3r/PlaceholderParser.cpp
 src/libslic3r/TreeSupport.cpp
-
+src/slic3r/GUI/calib_dlg.cpp
